Update sub-section heading sizes

--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -55,5 +55,5 @@ block body
 
 									if department.description
 										.content.column.is-two-fifths.is-hidden-mobile
-											h3.is-size-5 Description
+											h3.is-size-6.is-size-5-desktop Description
 											p= department.description
