--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -23,14 +23,13 @@ block body
 	+banner(image)
 		+banner-body(name, lead)
 			.buttons.is-pulled-right
-				.level-right
-					+link("https://goo.gl/maps/1trdfAtqE4A2", true)(class="button is-primary is-inverted is-outlined")
-						+icon("map-maker-alt")
-						span Get Directions
+				+link("https://goo.gl/maps/1trdfAtqE4A2", true)(class="button is-primary is-inverted is-outlined")
+					+icon("map-marker-alt")
+					span Get Directions
 
-					+link(`tel:+1${phoneNumber}`, false)(class="button is-primary is-inverted is-outlined")
-						+icon("phone")
-						span= phoneNumber
+				+link(`tel:+1${phoneNumber}`, false)(class="button is-primary is-inverted is-outlined")
+					+icon("phone")
+					span= phoneNumber
 	
 	.container
 		+section(null, null, "about")
