Update subheadings to be larger on mobile

--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -55,5 +55,5 @@ block body
 
 									if department.description
 										.content.column.is-two-fifths.is-hidden-mobile
-											h4.is-size-6.is-size-5-desktop Description
+											h4.is-size-5 Description
 											p= department.description
