Remove empty parentheses on mixin declarations

--- a/src/frontend/partials/mixins/card.pug
+++ b/src/frontend/partials/mixins/card.pug
@@ -22,10 +22,10 @@ mixin card-content(content)
 		else
 			block
 
-mixin card-footer()
+mixin card-footer
 	ul.card-footer
 		block
 
-mixin card-footer-item()
+mixin card-footer-item
 	li.card-footer-item
 		block
