--- a/src/frontend/partials/mixins/icon.pug
+++ b/src/frontend/partials/mixins/icon.pug
@@ -1,8 +1,8 @@
 mixin icon(name)
-	+bulma-icon()
+	+bulma-icon
 		+fa-icon(name)
 
-mixin bulma-icon()
+mixin bulma-icon
 	span.icon(class!=attributes.class)
 		block
 
