--- a/src/frontend/partials/mixins/banner.pug
+++ b/src/frontend/partials/mixins/banner.pug
@@ -2,7 +2,7 @@ mixin banner(image)
 	header.hero.is-medium.has-background-image(style=`background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(${require(`../../media/${image}`)});`)
 		block
 
-mixin banner-head()
+mixin banner-head
 	.hero-head
 		block
 
