Remove card-content, card-footer, and card-footer-item mixins

--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -3,7 +3,7 @@ extends ../../partials/base.pug
 mixin course(name, teachers, email, description, isHonors, isECE, isAP)
 	.card
 		+card-header(name)
-		+card-content
+		.card-content
 			if description
 				p.content= description
 
