--- a/src/frontend/partials/mixins/card.pug
+++ b/src/frontend/partials/mixins/card.pug
@@ -3,29 +3,13 @@ mixin column-card(name, content)
 		+card(name, content)
 			block
 
-mixin card(name, content)
+mixin card(name)
 	.card
 		+card-header(name)
-		+card-content(content)
+		.card-content
 			block
 
 mixin card-header(name)
 	.card-header
 		b.card-header-title= name
-		block
-
-mixin card-content(content)
-	.card-content
-		if content
-			.content
-				block
-		else
-			block
-
-mixin card-footer
-	ul.card-footer
-		block
-
-mixin card-footer-item
-	li.card-footer-item
 		block
