--- a/src/frontend/partials/mixins/message.pug
+++ b/src/frontend/partials/mixins/message.pug
@@ -1,4 +1,4 @@
-mixin message(name, description)
+mixin message(description, name)
 	.message(class!=attributes.class)
 		if name
 			+message-header(name)
