Update iframe mixin to use style for width percentage

--- a/src/frontend/partials/mixins/all.pug
+++ b/src/frontend/partials/mixins/all.pug
@@ -37,7 +37,7 @@ mixin table(headers)
 				block
 
 mixin iframe(source)
-	iframe(src=source width="100%" height=650)
+	iframe(src=source style="width: 100%;" height=500)
 
 include card.pug
 include message.pug
