Fix Prospective Students button spacing

--- a/src/frontend/partials/navbar.pug
+++ b/src/frontend/partials/navbar.pug
@@ -26,6 +26,6 @@ nav#navbar.navbar(role="navigation" aria-label="main navigation")
 				else
 					a.navbar-item(href=link.slug)= link.name
 			
-			.buttons
+			.navbar-item.buttons
 				a.button.is-primary(href=navbar.button.link)
-					b= navbar.button.text
+						b= navbar.button.text
