--- a/src/frontend/partials/navbar.pug
+++ b/src/frontend/partials/navbar.pug
@@ -11,8 +11,9 @@ nav#navbar.navbar(role="navigation" aria-label="main navigation")
 	#navbarMenu.navbar-menu
 		.navbar-start.is-hidden-touch
 			each icon in navbar.icons
-				+link(icon.link, true)(class="navbar-item image is16x16")
-					img(src=require(`../../media/${icon.image}`) alt="Icon")
+				+link(icon.link, true)(class="navbar-item")
+					figure.image.is-16x16
+						img(src=require(`../../media/${icon.image}`) alt="Icon")
 
 		.navbar-end
 			each link in navbar.links
