Rename mixin file banner.pug to hero.pug

--- a/src/frontend/partials/mixins/all.pug
+++ b/src/frontend/partials/mixins/all.pug
@@ -12,7 +12,7 @@ mixin body(name, lead, image)
 	.container
 		block
 
-include ./banner.pug
+include ./hero.pug
 
 mixin section(anchorId, name, lead)
 	section.section(id=anchorId)
