Fix School Events lead text

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -48,7 +48,7 @@ block body
 					each pillar in pillars
 						+pillar(pillar.icon, pillar.name, pillar.description)
 
-		+section("School Events", "News flash", "schoolEvents")
+		+section("schoolEvents", "School Events", "News flash")
 			.columns.is-variable.is-8
 				.column
 					+iframe("https://calendar.google.com/calendar/embed?src=oaomn16s4itdvibnciuc45386k%40group.calendar.google.com&ctz=America/New_York")
