Fix incorrect unit for .is-further-spaced media-left modifier

--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -13,7 +13,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 
 .media-left {
 	&.is-further-spaced {
-		margin-right: 2em;
+		margin-right: 2rem;
 	}
 }
 
