Remove aria-hidden from icon mixin

--- a/src/frontend/partials/mixins/icon.pug
+++ b/src/frontend/partials/mixins/icon.pug
@@ -7,4 +7,4 @@ mixin bulma-icon
 		block
 
 mixin fa-icon(name, size)
-	i.fas(class=`fa-${name}${size ? ` fa-${size}x` : ""}${attributes.class ? attributes.class : ""}` aria-hidden="true")
+	i.fas(class=`fa-${name}${size ? ` fa-${size}x` : ""}${attributes.class ? attributes.class : ""}`)
