Add calendar icon to open house dates

--- a/src/frontend/pages/prospective/index.pug
+++ b/src/frontend/pages/prospective/index.pug
@@ -50,6 +50,8 @@ block body
 								each date in openHouses.dates
 									.control
 										.tags.has-addons
-											span.tag.is-info= date.date
+											span.tag.is-info
+												+icon("calendar")
+												span= date.date
 											span.tag= date.time
 			
