Create a tags from links in announcement text automatically

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -57,4 +57,4 @@ block body
 					h4.is-size-5 Announcements
 					each announcement, index in announcements
 						.message.is-small
-							+message-body(announcement)
+							p.message-body !{linkify(announcement)}
