--- a/src/frontend/partials/mixins/all.pug
+++ b/src/frontend/partials/mixins/all.pug
@@ -1,8 +1,16 @@
-- const isEmptyObject = (object) => Object.values(object).every(x => !x);
-- const isEmptyObjectArray = (array) => !array.length || isEmptyObject(array[0])
-- const requireLocalImage = (link) => require(`../../media/${link}`)
-- const linkRegex = /(((https?:\/\/)|(www\.))[^\s]+)/g;
-- const linkify = (text) => text.replace(linkRegex, link => `<a href="${link.startsWith("www.") ? `//${link}` : link}" target="_blank" rel="noopener noreferrer">${link}</a>`);
+-
+	const isEmptyObject = object => Object.values(object).every(x => !x),
+		isEmptyObjectArray = array => !array.length || isEmptyObject(array[0]),
+		requireLocalImage = link => require(`../../media/${link}`),
+		linkRegex = /(((https?:\/\/)|(www\.))[^\s]+)/g,
+		linkify = text =>
+			text.replace(
+				linkRegex,
+				link =>
+					`<a href="${
+						link.startsWith("www.") ? `//${link}` : link
+					}" target="_blank" rel="noopener noreferrer">${link}</a>`
+			);
 
 mixin title(title)
 	title= `${title} | UHSSE`
