Implement rudimentary conversion of URLs to HTML links
This was difficult as I only wanted to unescape the HTML of the
converted URLs and
not the text they resided in.

I will clean up this implementation when I am not dead-tired.

--- a/src/frontend/pages/home/index.pug
+++ b/src/frontend/pages/home/index.pug
@@ -57,4 +57,5 @@ block body
 					h4.is-size-5 Announcements
 					each announcement, index in announcements
 						.message.is-small
-							p.message-body !{linkify(announcement)}
+							p.message-body
+								+linkify(announcement)
