--- a/src/frontend/styles/shared.scss
+++ b/src/frontend/styles/shared.scss
@@ -1,7 +1,25 @@
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts" !default;
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/solid";
-@import "~bulma";
+
+@import "~bulma/sass/utilities/_all.sass";
+@import "~bulma/sass/base/_all.sass";
+@import "~bulma/sass/components/navbar.sass"; // https://github.com/jgthms/bulma/issues/2154
+@import "~bulma/sass/layout/_all.sass";
+@import "~bulma/sass/grid/columns.sass";
+@import "~bulma/sass/components/tabs.sass";
+@import "~bulma/sass/components/level.sass";
+@import "~bulma/sass/components/media.sass";
+@import "~bulma/sass/components/message.sass";
+@import "~bulma/sass/components/card.sass";
+@import "~bulma/sass/elements/container.sass";
+@import "~bulma/sass/elements/content.sass";
+@import "~bulma/sass/elements/table.sass";
+@import "~bulma/sass/elements/image.sass";
+@import "~bulma/sass/elements/title.sass";
+@import "~bulma/sass/elements/button.sass";
+@import "~bulma/sass/elements/icon.sass";
+@import "~bulma/sass/elements/tag.sass";
 
 .hero.has-background-image {
 	position: relative;
