--- a/src/frontend/pages/academics/index.pug
+++ b/src/frontend/pages/academics/index.pug
@@ -25,8 +25,7 @@ block head
 	+title("Academics")
 
 block body
-	+hero(image)
-		+hero-body(name, lead)
+	+hero(image, name, lead)
 
 	.container
 		+section(assignments.anchorId, assignments.name, assignments.lead)
