Make the incoming students and open house messages optional

--- a/src/frontend/pages/prospective/index.pug
+++ b/src/frontend/pages/prospective/index.pug
@@ -34,24 +34,29 @@ block body
 				
 				.column.is-two-fifths
 					.message
-						+message-header("Incoming Students")
-						.message-body.content
-							p= incomingStudentInstructions.description
-							if !isEmptyObjectArray(incomingStudentInstructions.tests)
-								ol
-									each test in incomingStudentInstructions.tests
-										li= test
-					.message
-						+message-header("Open Houses")
-						.message-body.content
-							if openHouses.description
-								p= openHouses.description
-							.field.is-grouped.is-grouped-multiline
-								each date in openHouses.dates
-									.control
-										.tags.has-addons
-											span.tag.is-info
-												+icon("calendar")
-												span= date.date
-											span.tag= date.time
+						if incomingStudentInstructions.description || !isEmptyObjectArray(incomingStudentInstructions.tests)
+							+message-header("Incoming Students")
+							.message-body.content
+								if incomingStudents.description
+									p= incomingStudentInstructions.description
+								if !isEmptyObjectArray(incomingStudentInstructions.tests)
+									ol
+										each test in incomingStudentInstructions.tests
+											li= test
+					
+					if openHouses.description || !isEmptyObjectArray(openHouses.dates)
+						.message
+							+message-header("Open Houses")
+							.message-body.content
+								if openHouses.description
+									p= openHouses.description
+								if !isEmptyObjectArray(openHouses.dates)
+									.field.is-grouped.is-grouped-multiline
+										each date in openHouses.dates
+											.control
+												.tags.has-addons
+													span.tag.is-info
+														+icon("calendar")
+														span= date.date
+													span.tag= date.time
 			
